# Seapopym

./: .coverage  .gitignore  .readthedocs.yaml  .ruff.toml  CLAUDE.md  Makefile  README.md  pyproject.toml  pytest.ini
Global/: clim_model.py  debug_PE.py  forcings.ipynb  global_PE_no_transport.py  glodal_pter.ipynb  integrate_pter.py  integrated_pter.ipynb  plot_taylor_diag.ipynb  taylor_diagram.py
code_review/: ABSTRACT_CLASSES_CRITIQUE.md  AMELIORATION_DEV.md  APPLY_UFUNC_VS_MAP_BLOCKS.md  CORE_MODULE_CRITIQUE.md  FUNCTION_MODULE_CRITIQUE.md  MISSING_ANALYSIS_REPORT.md  OPTIMIZATION_FOCUSED_ROADMAP.md  PROJECT_CRITIQUE.md  STANDARD_MODULE_CRITIQUE.md
docs/: requirements.txt
docs/notebooks/: example_1d_model.ipynb  example_1d_model_bednarsek.ipynb  example_1d_model_pteropods.ipynb  example_dask_distribution.ipynb
docs/source/: abstract_configuration.plantuml  conf.py  example_1d_model.ipynb  example_3d_lmtl_D3N3.ipynb  example_3d_lmtl_micronekton.ipynb  example_3d_lmtl_micronekton_no_aggregation.ipynb  example_3d_lmtl_zooplankton.ipynb  example_model.ipynb  examples.rst  index.rst  modules.rst  seapodym_lmtl_python.cf_data.rst  seapodym_lmtl_python.configuration.no_transport.rst  seapodym_lmtl_python.configuration.rst  seapodym_lmtl_python.exception.rst  seapodym_lmtl_python.logging.rst  seapodym_lmtl_python.model.rst  seapodym_lmtl_python.post_production.rst  seapodym_lmtl_python.pre_production.core.rst  seapodym_lmtl_python.pre_production.rst  seapodym_lmtl_python.production.rst  seapodym_lmtl_python.rst  seapopym.configuration.acidity.rst  seapopym.configuration.no_transport.rst  seapopym.configuration.parameters.rst  seapopym.configuration.rst  seapopym.core.rst  seapopym.exception.rst  seapopym.function.compiled_functions.rst  seapopym.function.rst  seapopym.logging.rst  seapopym.model.rst  seapopym.plotter.rst  seapopym.rst  seapopym.standard.rst  seapopym.writer.rst
notebooks/: example_1d_model.ipynb  example_1d_model_pteropods.ipynb
notebooks/acidity_implementations_tests/: example_1d_model_bednarsek.ipynb  example_1d_model_pteropods.ipynb
notebooks/comparison/: forcing_import.ipynb
notebooks/examples/: example_1d_model.ipynb  example_1d_model_pteropods.ipynb
notebooks/lmtl_no_transport/: comparison.ipynb  comparison_1d_3d.ipynb
notebooks/papa_station_pteropods/: bednarsek_implementation_papa.ipynb
notebooks/tests_pteropods/: PAPA_optimization.ipynb  compare_opti.ipynb  global_PE_aragonite_vgpm.py  global_acidity_ar.py  initial_param.ipynb  test_datasets.ipynb  test_model_acidity.ipynb
seapodym_lmtl_python/: __init__.py  biomass.py  dependent.py  independant.py  independent.py  lmtl.py  pre_production.py
seapodym_lmtl_python/cf_data/: coordinates.py  units.py
seapodym_lmtl_python/config/: __init__.py  client.py  model_config.py  model_configuration.py  parameters.py  parser.py  saving.py
seapodym_lmtl_python/configuration/: base_configuration.py  no_transport_configuration.py  no_transport_parameters.py
seapodym_lmtl_python/logging/: custom_logger.py
seapodym_lmtl_python/model/: abstract_model.py  base_model.py  lmtl.py  no_transport.py  no_transport_model.py
seapodym_lmtl_python/post_production/: biomass.py
seapodym_lmtl_python/pre_production/: pre_production.py
seapodym_lmtl_python/process/: __init__.py  biomass.py  pre_production.py  production.py
seapodym_lmtl_python/production/: production.py
seapodym_lmtl_python/standard/: coordinates.py  units.py
seapopym/configuration/: abstract_configuration.py  base_configuration.py  validation.py
seapopym/core/: __init__.py  kernel.py  template.py
seapopym/exception/: parameter_exception.py
seapopym/function/: __init__.py  apply_aragonite_to_primary_production.py  apply_coefficient_to_primary_production.py  (+16 more)
test/: conftest.py
tests/: __init__.py  conftest.py  test_infrastructure.py
(+241 files in other folders)
