[tool.poetry]
name = "seapopym"
version = "0.0.1.3.2.3"
description = "Seapodym is a Python package that provides models to simulate the dynamics of low and mid trophic level marine ecosystems."
authors = ["Jules Lehodey <lehodey.jules+seapopym@gmail.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/Ash12H/Seapopym"
documentation = "https://seapopym.readthedocs.io/en/latest/"
classifiers = ["Topic :: Scientific/Engineering :: Oceanography"]

[tool.poetry.dependencies]
python = "^3.12"
xarray = "^2025.1.2"
dask = "^2025.2.0"
cf-xarray = "^0.10.4"
pint = "^0.24.4"
pint-xarray = "^0.4"
zarr = "^3.0.5"
numba = "^0.61.0"
attrs = "^25.3.0"
distributed = "^2025.2.0"
cftime = "^1.6.4.post1"
matplotlib = "^3.10.1"
netcdf4 = "^1.7.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
ipykernel = "^6.29.5"
ruff = "^0.11.0"
plotly = "^6.0.1"
nbformat = "^5.10.4"


[tool.poetry.group.docs.dependencies]
sphinx = "^8.2.3"
sphinx-rtd-theme = "^3.0.2"

[tool.poetry.requires-plugins]
poetry-plugin-export = "^1.9.0"

[tool.poetry.urls]
"Documentation" = "https://seapopym.readthedocs.io/en/latest/"
"Bug Tracker" = "https://github.com/Ash12H/Seapopym/issues"
